# encoder

./: .gitignore  README.md  attention_inspec.py  digit_transformer2.pt  digit_transformer3.pt  front_end.py  live_digit_generator.py  main.py  multidigit_generator.py  pyproject.toml  split_multidigit_dataset.py
notes/: eval_single_headatten_model.py  get_four_mnist.py  model_simplified.py  multi-head.py  process_one_img.py  processing_img.py  run_model_mulhd.py  run_single_headatten_model.py  single_headatten_model.py
src/frontend/: app.py  call_api.py
src/model/: api.py  app.py  eval_model.py  inference.py  init_decoder.py  init_encoder.py  init_model.py  init_model_decoder.py  init_model_mulhd.py  multidigit_dataset.py  plot_attention.py  process_image.py  run_model.py  run_model_mulhd.py  sweep_config.py  sweep_config.yaml  train_encoder_decoder.py  utils.py
