[project]
name = "encoder"
version = "0.1.0"
description = "MLX week 3 encoder part"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "torch==2.2.2",
    "torchmetrics>=1.7.3",
    "torchvision>=0.17.2",
    "wandb>=0.20.1",
]
[tool.uv]
package = true
